Correct top / bottom alignemnt

--- a/ui/static/css/common.css
+++ b/ui/static/css/common.css
@@ -608,13 +608,11 @@ a.button {
     background: var(--body-background);
     margin-bottom: 15px;
     margin-top: 50px;
-    padding-left:20px;
-    padding-right:20px;
+    padding-right:10px;
     padding-bottom:10px;
     position: fixed;
     bottom: 0px;
     width: 100%;
-    margin: auto;
     z-index: 9990;
 }
 .pagination-next > a {
